--- a/friends_page.html
+++ b/friends_page.html
@@ -3,62 +3,48 @@
 <head>
 	<meta charset="utf-8">
 	<title>Friends</title>
+<link href="css/tripist.css" rel="stylesheet">
+
 </head>
+
 <body>
-	<div id="header">
-		<div id="header_top">
-			<div id="header_left">
-				<img src="" alt="Tripist_logo">
-			</div>
-			<div id="header_right">
-				clock
-				celender
-			</div>
-		</div>
-		<div id="navbar">
-			<ul>
-				<li><a href="" class="selected">HOME</a></li>
-				<li><a href="">Home</a></li>
-				<li><a href="">Trip</a></li>
-				<li><a href="friends_page.html">Friends</a></li>
-				<li><a href="group_page.html">My Group</a></li>
-			</ul>
-		</div>
+	
+<div id="wrap">
+	<div id="top">
+		<img src="img/top.jpg" alt="top_image">
 	</div>
 
-	<div id ="friends_list">
-		<h1>MY Friends</h1>
-		<div id ="load_friend">
-			<!-- 친구 목록 불러오기 -->
+	<div id="body">
+  
+  	<div id="navbar">
+      <ul>
+       <li><a href="home_page.html">HOME</a></li>
+       <li><a href="make_trip.html">TRIP</a></li>
+       <li><a href="friends_page.html">FRIENDS</a></li>
+       <li><a href="group_page.html">MYGROUP</a></li>
+      </ul>
 		</div>
-		<div id = "create_group">
-			<select name = "select_group">
-				<option>group list</option>
-				<option>group list</option>
-				<option>group list</option>
-				<option>group list</option>
-			</select>
-			<a href = "group_page.html">
-			<input type = "button" name = "crate_new" value = "Create_New"></a>
-		</div>
-	</div>
+	
 
-	<div id = "find_friends">
-		<h1>Find Friends</h1>
-		<div id = "find">
-			<input type = "radio" name = "friend_data" value = "name">Name
-			<input type = "radio" name = "friend_data" value = "email">E-mail<br/>
-			<input type = "text" name = "user_mame" id = "user name"><br/>
-			<input type = "button" name = "find" value = "Find Friends">
-		</div>
-	</div>
-
-	<div id="footer">
-		<p>사이트 소개 | 이용약관 | 개인정보취급방침 | 책임의 한계와 법적 고지 | 고객센터 </p>
-		<p>
-		Copyright © Tripist
-		</p>
-	</div>
+  <h1>MY Friends</h1>
+	 <select name= "select_group">
+		 <option>group list</option>
+		 <option>group list</option>
+		 <option>group list</option>
+		 <option>group list</option>
+	 </select>
+   <input type= "button" name= "crate_new" value= "create_New">
+	
+	 <h1>Find Friends</h1>
+	 <input type= "radio" name= "friend_data" value= "name">Name
+	 <input type= "radio" name= "friend_data" value= "email">E-mail<br>
+	 <input type= "text" name= "user_mame" id= "user_name">
+	 <input type= "button" name= "find" value= "find_Friends">
+	 
+<div id="footer">
+	2012 MJU WEBPROGRAMMING A-1 reserved TRIPIST
+</div>
+</div>
 
 </body>
 </html>
