--- a/group_page.html
+++ b/group_page.html
@@ -3,54 +3,39 @@
 <head>
 	<meta charset="utf-8">
 	<title>Group</title>
+	<link href="css/tripist.css" rel="stylesheet">
+
 </head>
+
 <body>
-	<div id="header">
-		<div id="header_top">
-			<div id="header_left">
-				<img src="" alt="Tripist_logo">
-			</div>
-			<div id="header_right">
-				clock
-				celender
-			</div>
-		</div>
-		<div id="navbar">
-			<ul>
-				<li><a href="" class="selected">HOME</a></li>
-				<li><a href="">Home</a></li>
-				<li><a href="">Trip</a></li>
-				<li><a href="friends_page.html">Friends</a></li>
-				<li><a href="group_page.html">My Group</a></li>
-			</ul>
-		</div>
+	
+ <div id="wrap">
+	<div id="top">
+		<img src="img/top.jpg" alt="top_image">
 	</div>
 
-	<div id ="froup_list">
+	<div id="body">
+  
+  	<div id="navbar">
+      <ul>
+       <li><a href="home_page.html">HOME</a></li>
+       <li><a href="make_trip.html">TRIP</a></li>
+       <li><a href="friends_page.html">FRIENDS</a></li>
+       <li><a href="group_page.html">MYGROUP</a></li>
+      </ul>
+		</div>
+
+	
 		<h1>Group Name</h1>
-		<div id ="load_group">
-			<!-- 그룹 목록 불러오기 -->
-		</div>
-		<div id = "">
-			<a href = "friend_page.html"
-			<input type = "button" name = "add_friend" value = "Add Friends"></a>
-			<input type = "button" name = "delete_friend" value = "Delete">
-		</div>
-	</div>
-
-	<div id = "">
-		<div id = "">
-			<input type = "button" name = "create_group" value = "Create New">
-			<input type = "button" name = "delete_group" value = "Delete Group">
-		</div>
-	</div>
-
-	<div id="footer">
-		<p>사이트 소개 | 이용약관 | 개인정보취급방침 | 책임의 한계와 법적 고지 | 고객센터 </p>
-		<p>
-		Copyright © Tripist
-		</p>
-	</div>
+		<input type= "button" name= "add_friend" value= "Add Friends">
+		<input type= "button" name= "delete_friend" value= "Delete">
+		<input type= "button" name= "create_group" value= "Create New">
+		<input type= "button" name= "delete_group" value= "Delete Group">
+		
+<div id="footer">
+	2012 MJU WEBPROGRAMMING A-1 reserved TRIPIST
+</div>
+</div>
 
 
 </body>
