--- a/home_page.html
+++ b/home_page.html
@@ -2,52 +2,42 @@
 <html lang="ko"> 
 <head>
 	<meta charset="utf-8">
-	<title>Friends</title>
+	<title>Home</title>
+	<link href="css/tripist.css" rel="stylesheet">
+
 </head>
+
 <body>
-	<div id="header">
-		<div id="header_top">
-			<div id="header_left">
-				<img src="" alt="Tripist_logo">
-			</div>
-			<div id="header_right">
-				clock
-				celender
-			</div>
-		</div>
-		<div id="navbar">
-			<ul>
-				<li><a href="" class="selected">HOME</a></li>
-				<li><a href="">Home</a></li>
-				<li><a href="">Trip</a></li>
-				<li><a href="friends_page.html">Friends</a></li>
-				<li><a href="group_page.html">My Group</a></li>
-			</ul>
-		</div>
+
+<div id="wrap">
+	<div id="top">
+		<img src="img/top.jpg" alt="top_image">
 	</div>
 
-	<div id ="home">
-		<h1>Welcome 'name'</h1>
-		<div id ="trip_list">
-			<a href = " ">My Trip</a><br/>
-			<a href = " ">Recent Trip</a><br/>
-			<a href = " ">Passed Trip</a><br/>
-			<a href = " ">Upcomming Trip</a><br/>
+	<div id="body">
+  
+  	<div id="navbar">
+      <ul>
+       <li><a href="home_page.html">HOME</a></li>
+       <li><a href="make_trip.html">TRIP</a></li>
+       <li><a href="friends_page.html">FRIENDS</a></li>
+       <li><a href="group_page.html">MYGROUP</a></li>
+      </ul>
 		</div>
-	</div>
+	<h1>Welcome 'name'</h1>
+	
+	<a href= "#">My Trip</a><br>
+	<a href= "#">Recent Trip</a><br>
+	<a href= "#">Passed Trip</a><br>
+	<a href= "#">Upcomming Trip</a><br>
 
-	<div id = "make_button">
-		<a href = "make_trip">
-		<input type = "button" name = "make" value = "Make A Trip"></a>
-		</div>
-	</div>
+	<input type= "button" name= "make" value= "Make A Trip">
+	
+<div id="footer">
+	2012 MJU WEBPROGRAMMING A-1 reserved TRIPIST
+</div>
+</div>
 
-	<div id="footer">
-		<p>사이트 소개 | 이용약관 | 개인정보취급방침 | 책임의 한계와 법적 고지 | 고객센터 </p>
-		<p>
-		Copyright © Tripist
-		</p>
-	</div>
 
 </body>
 </html>
