--- a/make_trip.HTML
+++ b/make_trip.HTML
@@ -3,38 +3,58 @@
 <head>
 	<meta charset="utf-8">
 	<title> make trip </title>
+	<link href="css/tripist.css" rel="stylesheet">
+	
 </head>
+
 <body>
+	
+<div id="wrap">
+	<div id="top">
+		<img src="img/top.jpg" alt="top_image">
+	</div>
 
-please enter the trip name <br>
-<input type="text" name="trip_name"> <br>
-destination <br>
-<input type="text" name="destination"> <br>
+	<div id="body">
+  
+  	<div id="navbar">
+      <ul>
+       <li><a href="home_page.html">HOME</a></li>
+       <li><a href="make_trip.html">TRIP</a></li>
+       <li><a href="friends_page.html">FRIENDS</a></li>
+       <li><a href="group_page.html">MYGROUP</a></li>
+      </ul>
+		</div>
 
-<input type="checkbox" name="by_air"> by Airplane <br>
-<input type="text" name="flight_number">
-<input type="text" name="air_arrive_date">
-<input type="text" name="air_depart_date"> <br>
-<input type="checkbox" name="air_reserv"> reseverd
-<input type="checkbox" name="air_not_reserv"> not reseverd <br>
+
+ please enter the trip name <br>
+ <input type="text" name="trip_name"> <br>
+ destination <br>
+ <input type="text" name="destination"> <br>
+
+ <input type="checkbox" name="by_air"> by Airplane <br>
+ <input type="text" name="flight_number">
+ <input type="text" name="air_arrive_date">
+ <input type="text" name="air_depart_date"> <br>
+ <input type="checkbox" name="air_reserv"> reseverd
+ <input type="checkbox" name="air_not_reserv"> not reseverd <br>
 
 
-<input type="checkbox" name="by_car"> by Car <br>
-<input type="text" name="car_name">
-<input type="text" name="car_arrive_date">
-<input type="text" name="car_depart_date"> <br>
-<input type="checkbox" name="car_reserv"> reseverd
-<input type="checkbox" name="car_not_reserv"> not reseverd <br>
+ <input type="checkbox" name="by_car"> by Car <br>
+ <input type="text" name="car_name">
+ <input type="text" name="car_arrive_date">
+ <input type="text" name="car_depart_date"> <br>
+ <input type="checkbox" name="car_reserv"> reseverd
+ <input type="checkbox" name="car_not_reserv"> not reseverd <br>
 
-<input type="checkbox" name="by_train"> By train <br>
-<input type="text" name="train_number">
-<input type="text" name="train_arrive_date">
-<input type="text" name="train_depart_date"> <br>
-<input type="checkbox" name="train_reserv"> reserved
-<input type="checkbox" name="train_not_reserv"> not reseverd <br>
+ <input type="checkbox" name="by_train"> By train <br>
+ <input type="text" name="train_number">
+ <input type="text" name="train_arrive_date">
+ <input type="text" name="train_depart_date"> <br>
+ <input type="checkbox" name="train_reserv"> reserved
+ <input type="checkbox" name="train_not_reserv"> not reseverd <br> 
 
-<br>
-<table>
+ <br>
+ <table>
 	<tr>
 		<td> To DO List </td>
 		<td> cost </td>
@@ -47,6 +67,12 @@ destination <br>
 		<td><input type="text" name="date_1"></td>
 		<td><input type="text" name="time_1"></td>
 </table>
+
+
+<div id="footer">
+	2012 MJU WEBPROGRAMMING A-1 reserved TRIPIST
+</div>
+</div>
 
 
 </body>
