--- a/friends_page.html
+++ b/friends_page.html
@@ -33,13 +33,13 @@
 		 <option>group list</option>
 		 <option>group list</option>
 	 </select>
-   <input type= "button" name= "crate_new" value= "create_New">
+   <input type= "button" name= "crate_new" value= "Create_New">
 	
 	 <h1>Find Friends</h1>
-	 <input type= "radio" name= "friend_data" value= "name">Name
-	 <input type= "radio" name= "friend_data" value= "email">E-mail<br>
+	 <input type= "radio" name= "friend_data" value= "Name">Name
+	 <input type= "radio" name= "friend_data" value= "Email">E-mail<br>
 	 <input type= "text" name= "user_mame" id= "user_name">
-	 <input type= "button" name= "find" value= "find_Friends">
+	 <input type= "button" name= "find" value= "Find_Friends">
 	 
 <div id="footer">
 	2012 MJU WEBPROGRAMMING A-1 reserved TRIPIST
