--- a/group_page.html
+++ b/group_page.html
@@ -9,34 +9,36 @@
 
 <body>
 	
- <div id="wrap">
-	<div id="top">
-		<img src="img/top.jpg" alt="top_image">
-	</div>
-
-	<div id="body">
-  
-  	<div id="navbar">
-      <ul>
-       <li><a href="home_page.html">HOME</a></li>
-       <li><a href="make_trip.html">TRIP</a></li>
-       <li><a href="friends_page.html">FRIENDS</a></li>
-       <li><a href="group_page.html">MYGROUP</a></li>
-      </ul>
+ 	<div id="wrap">
+		<div id="top">
+			<img src="img/top.jpg" alt="top_image">
 		</div>
 
-	
-		<h1>Group Name</h1>
-		<input type= "button" name= "add_friend" value= "Add Friends">
-		<input type= "button" name= "delete_friend" value= "Delete">
-		<input type= "button" name= "create_group" value= "Create New">
-		<input type= "button" name= "delete_group" value= "Delete Group">
-		
-<div id="footer">
-	2012 MJU WEBPROGRAMMING A-1 reserved TRIPIST
-</div>
-</div>
+		<div id="body">
+  
+  		<div id="navbar">
+      			<ul>
+     				<li><a href="home_page.html">HOME</a></li>
+   				<li><a href="make_trip.html">TRIP</a></li>
+ 				<li><a href="friends_page.html">FRIENDS</a></li>
+ 				<li><a href="group_page.html">MYGROUP</a></li>
+      			</ul>
+		</div>
 
+		<div id = "group_list">
+		<h1>Group Name</h1>
+			<input type= "button" name= "add_friend" value= "Add Friends">
+			<input type= "button" name= "delete_friend" value= "Delete">
+		</div>
+		<div id = "group_cd">
+			<input type= "button" name= "create_group" value= "Create Group">
+			<input type= "button" name= "delete_group" value= "Delete Group">
+		</div>
+
+	<div id="footer">
+		2012 MJU WEBPROGRAMMING A-1 reserved TRIPIST
+	</div>
+</div>
 
 </body>
 
