--- a/MAIN.html
+++ b/MAIN.html
@@ -12,7 +12,7 @@
 				width: 60%;
 				margin-left: auto;
 				margin-right: auto;
-				margin-top: 100px;
+
 				}
 			.divDemoBody p {
 				font-size: 18px;
@@ -43,7 +43,7 @@
 				closeDialog ();
 				};
 			</script>
-		</head>
+	
 
 </head>
 
@@ -60,13 +60,13 @@
 
 		<ul>
 			<li><a href="#">HOME</a></li>
-			<li><a href="#">TRIP</a></li>
-			<li><a href="#">FRIENDS</a></li>
-			<li><a href="#">MYGROUP</a></li>
-     		 </ul>
+       <li><a href="#">TRIP</a></li>
+       <li><a href="#">FRIENDS</a></li>
+       <li><a href="#">MYGROUP</a></li>
+    </ul>
 	</div>
 	
-	<div id = "Main Text">
+	<div id = "MainText">
 		<h1>Hello!</h1>
 		<p> this home page is bblaahahaaaha</p>
 	
@@ -112,7 +112,7 @@
 				<li>password : <input type = "password" name="pwd1"/></li>
 				<li>           <input type = "password" name="pwd2"/></li>
 				<li>location :<input type ="text" name ="location" /><input type= "button" name="locFindBtn" value="find"/><li>
-				<li>photo :<input tyep ="file" name="photo"/></li>
+				<li>photo :<input type ="file" name="photo"/></li>
 
 			</ul>
 			</div>
@@ -122,6 +122,6 @@
 
 
 		</div>
-		
+	</div>
 	</body>
 </html>
